--- a/index.html
+++ b/index.html
@@ -47,22 +47,8 @@
                     <a href="https://qcfirst-1.jihoonk1116.repl.co/index.html" target="_blank">
                     <img src="img/qcfirst.png">
                     </a>
-                    <h3>QCFirst online course platform</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6><a href="" target="_blank">Source Code</a></h6>
+                    <h3>QCFirst online course platform</h3> 
+                    <h6><a href="https://github.com/jihoonk-1116/qcfirst" target="_blank">Source Code</a></h6>
                 </div>
                 <div class="content col-sm-1"></div>
                 <div class="content col-md-5">
@@ -70,21 +56,7 @@
                     <img src="img/weather.png">
                     </a>
                     <h3>Weather App</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/tree/master/projects/weather" target="_blank">Source Code</a></h6>
                 </div>
             </div>
             <div class="row project d-flex">
@@ -93,21 +65,7 @@
                     <img src="img/typing.png">
                     </a>
                     <h3>Typing Speed Tester</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/tree/master/projects/typing_tester" target="_blank">Source Code</a></h6>
                 </div>
                 <div class="content col-sm-1"></div>
                 <div class="content col-md-5">
@@ -115,21 +73,7 @@
                     <img src="img/search.png">
                     </a>
                     <h3>Search By Name - live app</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/tree/master/projects/search" target="_blank">Source Code</a></h6>
                 </div>
             </div>
             <div class="row project d-flex">
@@ -138,21 +82,7 @@
                     <img src="img/chatapp.png">
                     </a>
                     <h3>Chap App</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/tree/master/projects/chatapp" target="_blank">Source Code</a></h6>
                 </div>
                 <div class="content col-sm-1"></div>
                 <div class="content col-md-5">
@@ -160,21 +90,7 @@
                     <img src="">
                     </a>
                     <h3>Shopper - live app</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/tree/master/projects/shopper/shopper/server" target="_blank">Source Code</a></h6>
                 </div>
             </div>
         </section>
@@ -186,21 +102,7 @@
                     <img src="img/fcc.png">
                     </a>
                     <h3>MongoDB and Mongoose</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/fcc/mongoose.js" target="_blank">Source Code</a></h6>
                 </div>
                 <div class="content col-sm-1"></div>
                 <div class="content col-md-5">
@@ -208,21 +110,7 @@
                     <img src="img/time.png">
                     </a>
                     <h3>TimeStamp Microservice</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/fcc/timestamp.js" target="_blank">Source Code</a></h6>
                 </div>
             </div>
             <div class="row project d-flex">
@@ -231,21 +119,7 @@
                     <img src="img/header.png">
                     </a>
                     <h3>HeaderParser Microservice</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/fcc/hearparser.js" target="_blank">Source Code</a></h6>
                 </div>
                 <div class="content col-sm-1"></div>
                 <div class="content col-md-5">
@@ -253,21 +127,7 @@
                     <img src="img/url.png">
                     </a>
                     <h3>URL Shortener Microservice - live</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/fcc/urlshortener.js" target="_blank">Source Code</a></h6>
                 </div>
             </div>
             <div class="row project d-flex">
@@ -276,21 +136,7 @@
                     <img src="img/meta.png">
                     </a>
                     <h3>File Metadata Microservice</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/fcc/filemeta.js" target="_blank">Source Code</a></h6>
                 </div>
                 <div class="content col-sm-1"></div>
                 <div class="content col-md-5">
@@ -298,21 +144,7 @@
                     <img src="img/Exercise.png">
                     </a>
                     <h3>Exercise Tracker - in progress</h3>
-                    <ul>
-                        <li>
-                          Visual Design using Bootstrap
-                        </li>
-                        <li>
-                           User Management, Authentication
-                        </li>
-                        <li>
-                            Course Management
-                        </li>
-                        <li>
-                            CRUD operations
-                        </li>
-                    </ul>    
-                    <h6>Skils: Nodejs, MongoDB, Bootstrap, jQuery, Express</h6>
+                    <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/fcc/exercisetraker.js" target="_blank">Source Code</a></h6>
                 </div>
             </div>
     </div>
