--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <a href="https://chapapp.jihoonk1116.repl.co" target="_blank">
                     <img src="img/chatapp.png">
                     </a>
-                    <h3>Chap App</h3>
+                    <h3>Chat App</h3>
                     <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/tree/master/projects/chatapp" target="_blank">Source Code</a></h6>
                 </div>
                 <div class="content col-sm-1"></div>
