--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="content col-sm-1"></div>
                 <div class="content col-md-5">
                     <a href="https://shopper.jihoonk1116.repl.co" target="_blank">
-                    <img src="">
+                    <img src="img/shopper.png">
                     </a>
                     <h3>Shopper - live app</h3>
                     <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/tree/master/projects/shopper/shopper/server" target="_blank">Source Code</a></h6>
