--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <section class="container" id="info-details">
             <div class="row project d-flex">
                 <div class="content col-md-5">
-                    <a href=" target="_blank"">
+                    <a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/fcc/mongoose.js" target="_blank">
                     <img src="img/fcc.png">
                     </a>
                     <h3>MongoDB and Mongoose</h3>
