--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <div class="container">
-        <h2>Web Developing</h2>
+        <h2>Web Projects</h2>
         <section class="container" id="info-details">
             <div class="row project d-flex">
                 <div class="content col-md-5">
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </section>
-        <h2>Microservice & FreeCodeCamp</h2>
+        <h2>Microservices & FreeCodeCamp Tutorials</h2>
         <section class="container" id="info-details">
             <div class="row project d-flex">
                 <div class="content col-md-5">
