--- a/html/resume.html
+++ b/html/resume.html
@@ -45,6 +45,8 @@
         <div class="content-wrap">
           <h1>Chihoon Kim</h1>
           <h2>Software Engineer & Devlover</h2>
+          <p>As a computer science student, I'm continuously pursuing learning new knowledge and developing techniques with my passion.
+          </p>
         </div>
       </header>
 
