--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
         </div>
     </nav>
     <div class="container">
+        <h2>Basic Profile</h2>
+        <section class="container">
+            <h4>Name</h4>
+            <h6 class="h6">Chihoon Kim</h6>
+            <h4>Tech Skills </h4>
+            <p>Java, C, Python, AWS, HTML, CSS, JavaScript, Node, SQL, MongoDB</p>
+            <h4>Soft Skills</h4>
+            <p>Communication, Leadship, Problem Solving, Positive Attitude, Teamwork</p>
+        </section>
+    </div>
+    <div class="container">
         <h2>Web Projects</h2>
         <section class="container" id="info-details">
             <div class="row project d-flex">
