--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <a href="https://boilerplate-project-exercisetracker.jihoonk1116.repl.co" target="_blank">
                     <img src="img/Exercise.png">
                     </a>
-                    <h3>Exercise Tracker - in progress</h3>
+                    <h3>Exercise Tracker</h3>
                     <h6><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/fcc/exercisetraker.js" target="_blank">Source Code</a></h6>
                 </div>
             </div>
