--- a/projects/weather/weather.html
+++ b/projects/weather/weather.html
@@ -63,10 +63,8 @@
             </div>
             <div class="container" id="map">
                    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-            <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=initMap&libraries=&v=weekly"
-            async
-      ></script>
+            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnT-dzeEh_aCzaPxFTSffohniCWoq_9xU&callback=initMap"
+  type="text/javascript"></script>
             </div>
         </body>
       <footer>
