--- a/html/resume.html
+++ b/html/resume.html
@@ -44,7 +44,7 @@
       <header>
         <div class="content-wrap">
           <h1>Chihoon Kim</h1>
-          <h2>Software Engineer & Devlover</h2>
+          <h2>Computer Science Student</h2>
           <p>As a computer science student, I'm continuously pursuing learning new knowledge and developing techniques with my passion.
           </p>
         </div>
@@ -54,13 +54,13 @@
       <section class="projects">
         <div class="content-wrap divider">
           <h2>Featured Projects</h2>
-          <p>View selected projects below. Source code can be found at <a href="https://github.com/jihoonk-1116">my Github</a>.</p>
+          <p>View selected projects below. Source code can be found at <a href="https://github.com/jihoonk-1116">My Github</a>.</p>
 
           <!-- Project 1 -->
           <section class="project-item">
             <img src="../img/qcfirst.png" alt="qcfirst" height="250px" >
-            <h3>Online class platform - In progress</h3>
-            <p>Fullstack developing from front-end to back-end with HTML, CSS, JavaScript, Nodejs, jQuery, Database, Express.
+            <h3>Online class platform</h3>
+            <p>Fullstack developing from front-end to back-end with HTML, CSS, JavaScript, Nodejs, jQuery, Database(MongoDB), Express.
               The webpage supports user sign-up, user authentication, course management, enrollment management.
             </p>
             <a class="btn" href="https://github.com/jihoonk-1116/qcfirst" target="_blank">Github</a>
@@ -70,23 +70,22 @@
           <!-- Project 2 -->
           <section class="project-item">
             <img src="../img/RR.png" alt="Round-Robin Scheduling" height="200px">
-            <h3>Round-Robin Scheduling</h3>
+            <h3>Operting system projects</h3>
             <p>
-              In the Operating System course, I implemented non-preemptive and preemptive scheduling depending 
-              on processes' priority using the C language's structure. I also implemented Singly-LinkedList 
-              data structure that finds an element's proper position to keep their priority when they are inserted into it
-              without calling sort method.
+              1. Non-preemptive and preemptive round-robin process scheduler depending 
+              on its priority using the C language's structure.
+              2. Multi-thread huge sum calculator using pthread library of C
+              3. Memory allocator implementing of process allocation in memory using worst-fit mode
             </p>
             <a class="btn" href="https://github.com/jihoonk-1116/Operating-System/blob/main/RoundRobin-scheduler/KChihoon_schd.c" target="_blank">Source Code</a>
           </section>
 
           <section class="project-item">
             <img src="../img/mul.png" alt="multi-thread" height="230px">
-            <h3>Multi-Threads Calculator</h3>
+            <h3>Banking System</h3>
             <p>
-              In the Operating System course, implementation of Multi-Threads Calculator was assigned using C language's pthread() and fork().
-              The project required generating maximum of 50 children and 50 grandchildren to sum a huge number (ex, summation from 1 to 10000000).
-              I could understand how multiple threads are managed and what the purpose is to use a number of threads
+               In the Software engineering class, Banking system was implemented as a team final project. It uses five different design models to build its functionality efficiently.
+               Observer, Singleton, Factory, State, Strategy pattern are used. OOP priciples were adopted while developing.
             </p>
             <a class="btn" href="https://github.com/jihoonk-1116/Operating-System/blob/main/Multithread-calculator/KChihoon_thd.c" target="_blank">Source Code</a>
           </section>
@@ -96,9 +95,17 @@
             <img src="../img/top-down.png" alt="top-down parser">
             <h3>Top-Down Parser</h3>
             <p>
-              In the Principle of Programming Language class, I implemented Lexical Analyzer and Top-down Parser using Java. I utilized LinkedList and HashMap Java collections.
-              Above 50 classes were required to implement this project including abstact classes and thier children. I could learn how programming languages parse and understand
-              user inputs and calculate them. 
+              In the Principle of Programming Language class, I implemented Lexical Analyzer and Top-down Parser, interpreter using Java mocking LISP language interpreter. 
+            </p>
+            <a class="btn" href="https://github.com/jihoonk-1116/Programming_Language/tree/main/Top_down_parser/bin/cs316project" target="_blank">Source Code</a>
+          </section>
+          
+          <!-- Project 5 -->
+          <section class="project-item">
+            <img src="../img/top-down.png" alt="top-down parser">
+            <h3>Todo-assistant</h3>
+            <p>
+             Python3 project -- need to change
             </p>
             <a class="btn" href="https://github.com/jihoonk-1116/Programming_Language/tree/main/Top_down_parser/bin/cs316project" target="_blank">Source Code</a>
           </section>
