--- a/html/resume.html
+++ b/html/resume.html
@@ -73,9 +73,9 @@
             <h3>Operting system projects</h3>
             <p>
               1. Non-preemptive and preemptive round-robin process scheduler depending 
-              on its priority using the C language's structure.
-              2. Multi-thread huge sum calculator using pthread library of C
-              3. Memory allocator implementing of process allocation in memory using worst-fit mode
+              on its priority using the C language's structure.<br>
+              2. Multi-thread huge sum calculator using pthread library of C<br>
+              3. Memory allocator implementing of process allocation in memory using worst-fit mode<br>
             </p>
             <a class="btn" href="https://github.com/jihoonk-1116/Operating-System/blob/main/RoundRobin-scheduler/KChihoon_schd.c" target="_blank">Source Code</a>
           </section>
