--- a/html/resume.html
+++ b/html/resume.html
@@ -61,7 +61,7 @@
             <img src="../img/qcfirst.png" alt="qcfirst" height="250px" >
             <h3>Online class platform</h3>
             <p>Fullstack developing from front-end to back-end with HTML, CSS, JavaScript, Nodejs, jQuery, Database(MongoDB), Express.
-              The webpage supports user sign-up, user authentication, course management, enrollment management.
+              The webpage supports user sign-up, user authentication, course management, enrollment management, responsiveness.
             </p>
             <a class="btn" href="https://github.com/jihoonk-1116/qcfirst" target="_blank">Github</a>
             <a class="btn" href="https://qcfirst-1.jihoonk1116.repl.co/index.html" target="_blank">Live App</a>
@@ -74,7 +74,7 @@
             <p>
               1. Non-preemptive and preemptive round-robin process scheduler depending 
               on its priority using the C language's structure.<br>
-              2. Multi-thread huge sum calculator using pthread library of C<br>
+              2. Multi-thread huge sum calculator using pthread library<br>
               3. Memory allocator implementing of process allocation in memory using worst-fit mode<br>
             </p>
             <a class="btn" href="https://github.com/jihoonk-1116/Operating-System/blob/main/RoundRobin-scheduler/KChihoon_schd.c" target="_blank">Source Code</a>
@@ -84,7 +84,7 @@
             <img src="../img/mul.png" alt="multi-thread" height="230px">
             <h3>Banking System</h3>
             <p>
-               In the Software engineering class, Banking system was implemented as a team final project. It uses five different design models to build its functionality efficiently.
+               In the Software engineering class, Banking system was implemented as the course's team final project. It uses five different design models to build its functionality efficiently.
                Observer, Singleton, Factory, State, Strategy pattern are used. OOP priciples were adopted while developing.
             </p>
             <a class="btn" href="https://github.com/jihoonk-1116/Operating-System/blob/main/Multithread-calculator/KChihoon_thd.c" target="_blank">Source Code</a>
@@ -93,24 +93,30 @@
           <!-- Project 4 -->
           <section class="project-item">
             <img src="../img/top-down.png" alt="top-down parser">
-            <h3>Top-Down Parser</h3>
+            <h3>Interpreter</h3>
             <p>
-              In the Principle of Programming Language class, I implemented Lexical Analyzer and Top-down Parser, interpreter using Java mocking LISP language interpreter. 
+              In the Principle of Programming Language class, I implemented Lexical Analyzer and Top-down Parser, 
+              interpreter using Java mocking LISP language interpreter.
+              <br><br><br>
             </p>
-            <a class="btn" href="https://github.com/jihoonk-1116/Programming_Language/tree/main/Top_down_parser/bin/cs316project" target="_blank">Source Code</a>
+            <a class="btn" href="https://github.com/jihoonk-1116/Programming_Language" target="_blank">Source Code</a>
           </section>
           
           <!-- Project 5 -->
           <section class="project-item">
-            <img src="../img/top-down.png" alt="top-down parser">
+            <img src="" alt="Todo-assistant">
             <h3>Todo-assistant</h3>
             <p>
              Python3 project -- need to change
+             <br>
+             <br>
+             <br>
             </p>
-            <a class="btn" href="https://github.com/jihoonk-1116/Programming_Language/tree/main/Top_down_parser/bin/cs316project" target="_blank">Source Code</a>
+            <a class="btn" href="https://github.com/jihoonk-1116/todo-assistant" target="_blank">Source Code</a>
           </section>
+
         </div>
-    </section>
+      </section>
       <!-- *************  EDUCATION & CERTIFICATIONS *********** -->
       <section class="education contact">
         <div class="content-wrap item-details">
