--- a/html/resume.html
+++ b/html/resume.html
@@ -125,7 +125,7 @@
             <section class="item project-item">
               <img src="../img/rok.png">
               <h3>Republic of Korea Army - First Lieutenant</h3>
-              <p>Experience of Platoon Leader & Company Commander</p>
+              <p>Served as Platoon Leader & Company Commander</p>
             </section>
           </div>
           <h2>EDUCATION & CERTIFICATIONS</h2>
