--- a/html/resume.html
+++ b/html/resume.html
@@ -47,7 +47,7 @@
           <h2>Computer Science Student</h2>
           <p>As a computer science student, I'm continuously pursuing learning new knowledge and developing techniques with my passion.
           </p>
-          <img src="../img/rotc.png">
+          <img src="../img/chihoonkim_resume.pdf">
         </div>
       </header>
 
